Updated openapi schema definition for protected routes
